--- a/futures-test/Cargo.toml
+++ b/futures-test/Cargo.toml
@@ -19,7 +19,8 @@ futures-core-preview = { version = "0.3.0-alpha.2", path = "../futures-core", de
 futures-util-preview = { version = "0.3.0-alpha.2", path = "../futures-util", default-features = false }
 futures-executor-preview = { version = "0.3.0-alpha.2", path = "../futures-executor", default-features = false }
 # FIXME(taiki-e): When a new version of pin-utils is released, fix this line.
-pin-utils = { git = "https://github.com/rust-lang-nursery/pin-utils.git", default-feature= false}
+pin-utils = "0.1.0-alpha.4"
 
 [dev-dependencies]
 futures-preview = { version = "0.3.0-alpha.2", path = "../futures", default-features = false, features = ["std"] }
+
